created a css style for index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jianfeng's Project 1</title>
+  <title>Jianfeng's Project 2</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <section>
