fixed sections in index

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   </section>
   <section>
     <h1>Introduction</h1>
+    <div>
+      <img src="images/self_portrait.jpg" alt="Self Portrait of Jianfeng Xue">
+      <p>This was a recent photo of me when I went to a sunflower field!</p>
+    </div>
+    <div>
+      <p>Hello my fellow ITMD-361 classmates, TAs, and Professor Krieglstein! My name is Jianfeng Xue, a current senior at Jones College Prep.</p>
+    </div>
   </section>
-  <div>
-    <img src="images/self_portrait.jpg" alt="Self Portrait of Jianfeng Xue">
-    <p>This was a recent photo of me when I went to a sunflower field!</p>
-  </div>
-  <div>
-    <p>Hello my fellow ITMD-361 classmates, TAs, and Professor Krieglstein! My name is Jianfeng Xue, a current senior at Jones College Prep.</p>
-  </div>
   <section>
     <h3>Who am I?</h3>
     <ul>
@@ -42,9 +42,10 @@
       <li>Using the knowledge I learn in Computer Science courses, I want to use computer science to solve long-unsolved math mysteries</li>
     </ul>
   </section>
-  <div>
+  <section>
+	<h3>Extra Photo of Me:</h3>
     <img src="images/hoco_pic.jpg" alt="Recent Hoco pics of me and my friends">
     <p>A more recent photo of me with my friends at Jones Homecoming night</p>
-  </div>
+  </section>
 </body>
 </html>
