--- a/fav_artist.html
+++ b/fav_artist.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Favorite Artist</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <section>
