added the name joji

--- a/fav_artist.html
+++ b/fav_artist.html
@@ -46,7 +46,7 @@
     </ol>
   </section>
   <section>
-    <h3>3. </h3>
+    <h3>3. Joji</h3>
     <img src="images/joji.jpg" alt="A photo of Joji">
     <h4>My favorite songs from Joji</h4>
     <ol>
