created main nav

--- a/resume.html
+++ b/resume.html
@@ -12,11 +12,13 @@
 <body>
   <section>
     <h1>Project Links:</h1>
-    <ul>
-      <li><a href="index.html">Introduction</a></li>
-      <li><a href="fav_artist.html">Favorite Artist</a></li>
-      <li><a href="resume.html">Resume</a></li>
-    </ul>
+    <nav id="main-nav">
+      <ul>
+        <li><a href="index.html">Introduction</a></li>
+        <li><a href="fav_artist.html">Favorite Artist</a></li>
+        <li><a href="resume.html">Resume</a></li>
+      </ul>
+    </nav>
   </section>
   <section>
     <h1>Professional Resume</h1>
