--- a/index.html
+++ b/index.html
@@ -21,13 +21,20 @@
     </nav>
   </section>
   <section>
-    <h1>Introduction</h1>
-    <div>
-      <img src="images/self_portrait.jpg" alt="Self Portrait of Jianfeng Xue">
-      <p>This was a recent photo of me when I went to a sunflower field!</p>
+    <div id="left-column">
+      <h1>Introduction</h1>
+      <div>
+        <img src="images/self_portrait.jpg" alt="Self Portrait of Jianfeng Xue">
+        <p>This was a recent photo of me when I went to a sunflower field!</p>
+      </div>
+      <div>
+        <p>Hello my fellow ITMD-361 classmates, TAs, and Professor Krieglstein! My name is Jianfeng Xue, a current senior at Jones College Prep.</p>
+      </div>
     </div>
-    <div>
-      <p>Hello my fellow ITMD-361 classmates, TAs, and Professor Krieglstein! My name is Jianfeng Xue, a current senior at Jones College Prep.</p>
+    <div id="right-column">
+      <h3>Extra Photo of Me:</h3>
+      <img src="images/hoco_pic.jpg" alt="Recent Hoco pics of me and my friends">
+      <p>A more recent photo of me with my friends at Jones Homecoming night.</p>
     </div>
   </section>
   <section>
@@ -47,11 +54,6 @@
       <li>My ultimate goal in life is to discover new mathematics in the already-complex state of math</li>
       <li>Using the knowledge I learn in Computer Science courses, I want to use computer science to solve long-unsolved math mysteries</li>
     </ul>
-  </section>
-  <section>
-  <h3>Extra Photo of Me:</h3>
-    <img src="images/hoco_pic.jpg" alt="Recent Hoco pics of me and my friends">
-    <p>A more recent photo of me with my friends at Jones Homecoming night</p>
   </section>
 </body>
 </html>
